Make sure ranges dropdown will not cover the widget scrollbar. - In opus.css (line 1989-1990), add left values to tune the ranges dropdown   location so that it will never overlap with the widget scrollbar.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -1986,6 +1986,8 @@ ul.ui-autocomplete a.ui-state-active {
     width: 500px;
     max-width: 110%;
     word-break: keep-all;
+    /* This will make sure dropdown is not covering the widget scrollbar */
+    left: -0.5em !important;
 }
 
 @media (max-width: 680px) {
